src/components/Header/header.module.scss
@import '@/styles//functions';

.headerTop {
  padding: 25px 50px;
  max-width: 1540px;
  margin: 0 auto;

  &Logo {
    font-size: rem(34px);
    line-height: 120%;
    font-family: 'Nunito', sans-serif;
    font-weight: 800;
    color: #1c1817;
    text-decoration: none;
  }
}

.catalog__hamburger {
  width: 48px;
  height: 48px;
  padding: 12px;
  display: flex;
  align-items: center;
}

@media (max-width: 1070px) {
  .headerTop {
    background-color: var(--white-color);
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    padding: 17px 16px 12px 16px;

    &Logo {
      color: rgb(28, 24, 23);
      font-family: Nunito;
      font-size: 34px;
      font-weight: 800;
      line-height: 120%;
      text-align: center;
      display: block;
      margin: 0 auto;
    }
  }
}

.headerBottom {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
  flex-direction: row;
  position: relative;
  min-height: 80px;
  background-color: var(--carousel-theme-color);
  z-index: 999;

  &:focus {
    border: none;
    outline: none;
  }

  &Catalog {
    padding: 15px 194px 16px 22px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    flex-direction: row;
    gap: 10px;
    border: none;
    background-color: var(--theme-color);
    position: relative;
    transition: 0.3s linear;

    h1 {
      margin: 0;
      font-size: 42px;
      font-weight: 500;
      line-height: 150%;
      color: var(--white-color);
    }
    > img {
      max-width: initial;
    }
  }
  &Catalog__active {
    cursor: pointer;
  }
  &Buttons {
    display: flex;
    align-items: center;
    gap: 16px;
    position: relative;
    > a,
    > button {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 48px;
      height: 48px;
      background-color: #ffffff;
      border: none;
      border: 1px solid #eae4ee;
      border-radius: 10px;
      cursor: pointer;
      text-decoration: none;
      position: relative;

      &:hover {
        background-color: #4da856;
        > svg path {
          stroke: #fff;
        }
        > span {
          color: #fff;
        }
      }

      &:active {
        background-color: #00680a;
      }
    }

    > a svg {
      path {
        stroke: #000;
        stroke-width: 1.5px;
      }
    }
    > a:nth-child(2) {
      &:hover svg path {
        stroke-width: 1px;
        stroke: #fff;
      }
      svg {
        width: 23px;
        path {
          stroke: #000;
          stroke-width: 0.5px;
        }
      }
    }

    > a:nth-child(4) svg,
    > button:nth-child(4) svg {
      width: 34px;
      height: 34px;
      path {
        stroke-width: 1px;
        stroke: var(--text-color, #1c1817);
      }
    }
    > a:nth-child(4) {
      &:hover svg path {
        stroke: #fff;
      }
    }

    > a:nth-child(4):hover + div {
      display: block;
    }
    .tooltip {
      display: none;
      top: 46px;
      right: 0;
      z-index: 1;
      position: absolute;
      transform: translateY(-10px);
      transition:
        opacity 0.3s ease,
        transform 0.3s ease;
      &:hover {
        display: block;
      }
    }
  }
}

.hidden-header-bottom-wrapper {
  display: contents;
}

.fixedHeader {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 999;
  width: 100%;
  > div {
    max-width: 1540px;
    margin: 0 auto;
    padding-left: 50px;
    background-color: initial;
    > div {
      display: flex;
      justify-content: space-between;
      align-items: center;
      width: 100%;
      gap: 40px;
      flex-direction: row;
      padding-right: 50px;
      background-color: var(--carousel-theme-color);
    }
  }
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  max-width: 100vw; /* Full viewport width */
  max-height: 100vh;
  width: 100vw; /* Full viewport width */
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.5); // Adjust color and opacity
  opacity: 0;
  display: block;
  pointer-events: none; // Prevent interactions
  transition: opacity 0.3s ease;
  z-index: 3;
}

.overlay.active {
  opacity: 1;
  pointer-events: auto;
}

.catalogListWrap {
  position: absolute;
  z-index: 3;
  @media (max-width: 991px) {
    top: 80px;
    left: 0;
  }
  @media (max-width: 767px) {
    top: 64px;
  }
  > div {
    width: 420.18px;
    @media (max-width: 991px) {
      border-bottom-left-radius: 0px;
      border-bottom-right-radius: 0px;
    }
    ul {
      height: 100%;
      overflow-y: auto;
      -ms-overflow-style: none;
      scrollbar-width: none;
      &::-webkit-scrollbar {
        display: none;
      }
    }
  }
}
// .catalogListWrapVisible {
//   display: block;
//   background: rgba(28, 24, 23, 0.77);
// }

.tooltip-visible {
  transform: translateY(0);
}
.headerBottomWrap {
  max-width: 1540px;
  margin: 0 auto;
  padding: 0 50px;
  background-color: var(--carousel-theme-color);

  &.fixedHeader {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
    width: 100%;
    z-index: 40;
    max-width: 100%;
    margin: 0;
    padding: 0;

    > .headerBottom {
      max-width: 1540px;
      justify-content: space-between;
      margin: 0 auto;
    }
  }
}

@media (max-width: 1440px) {
  .headerBottomWrap {
    max-width: initial;
    background-color: var(--carousel-theme-color);
    padding: 0 !important;

    .headerBottom {
      padding-right: 8px;
      gap: 25px;
      justify-content: space-between;
      padding: 0 50px;
      background-color: inherit;
      &Catalog {
        padding: 12px 114px 16px 22px;
      }
    }
  }
  .fixedHeader {
    .headerBottom {
      padding-right: 0;
      > div {
        justify-content: space-between;
        gap: 25px;
      }
    }
  }

  .catalogListWrap {
    > div {
      width: 340.18px;
    }
  }
}

// @media screen and ((min-width: 992px )and (max-width: 1250px)) {
//   .catalogListWrap {
//     > div {
//       left: calc(var(--parent-left));
//     }
//   }
// }
@media (max-width: 1250px) {
  .fixedHeader {
    > div {
      padding: 0 20px;
      > div {
        padding-right: 0;
      }
    }
  }
  .headerBottomWrap {
    .headerBottom {
      justify-content: space-between;
      padding: 0 20px;

      gap: 25px;

      &Buttons {
        gap: 10px;
      }
    }
  }
}

@media (max-width: 1060px) {
  .headerBottomWrap {
    .headerBottomCatalog {
      padding: 12px 94px 16px 22px;
    }
  }
  .catalogListWrap {
    > div {
      justify-content: space-between;
      width: 320px;
    }
  }
}

@media (max-width: 992px) {
  .fixedHeader {
    > div {
      > div {
        gap: 20px;
        padding-right: 0;
      }
    }
  }
  .headerBottom {
    padding-right: 30px;
    gap: 20px;
    > div {
      justify-content: space-between;

      > img {
        width: 22px;
        cursor: pointer;
        user-select: none;
      }
      .active-burger-menu {
        width: 9px;
        margin: 0 6.5px;
        user-select: none;
      }
    }
    &Catalog {
      padding: 13px 25px;
    }
    &Buttons {
      gap: 8px;
    }
  }
  .catalogListWrap {
    > div {
      width: 100vw;
      height: 100vh;
    }
  }
}

@media (max-width: 1070px) {
  .badgeCount {
    background: var(--theme-color);
    color: var(--white-color);
    bottom: -6px;
    box-sizing: border-box;
    outline: none;
    position: absolute;
    right: -3px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 16px;
    height: 16px;
    font:
      700 9px / 16px 'roboto',
      'Arial';
    border-radius: 100%;
  }
}

@media screen and (max-width: 768px) {
  header {
    background-color: #fff;
  }

  .headerBottomWrap {
    background-color: #fff;
    padding: 0;
    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.08);
    .headerBottom {
      min-height: 64px;
      background-color: inherit;
      // -------------------------------------------------------------------------
      padding: 0 16px;
      // box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.08);
      gap: 9px;
      > div {
        gap: 9px;
      }
    }
  }

  .headerBottomButtons {
    a {
      width: 48px;
      height: 48px;
    }
    a:not(:nth-child(4)) {
      display: none;
    }
    button:not(:nth-child(4)) {
      display: none;
    }
  }
  .fixedHeader > div > div {
    background-color: #fff;
  }
}

@media screen and (max-width: 450px) {
  .fixedHeader {
    > div {
      padding: 0 16px;
    }
    .headerBottom {
      > div {
        gap: 9px;
      }
    }
  }
}

@media (max-width: 380px) {
  // .headerBottomWrap {
  //   .headerBottom {
  //     gap: 10px;
  //   }
  // }
  .headerBottomButtons {
    a {
      width: 40px;
      height: 40px;
    }
  }
  .headerBottom {
    &Buttons {
      > button {
        width: 40px;
        height: 40px;
      }
      > button:nth-child(4) svg {
        width: 30px;
        height: 30px;
      }
    }
  }
}
// .catalog__hamburger {
//   width: 25px;
// }

.catalog-section {
  display: block;
  align-items: center;
  justify-content: center;
  // gap: 16px;

  .auth-back-button {
    display: none;
    align-items: center;
    justify-content: center;
    width: 25px;
    height: 42px;
    background-color: #ffffff;
    border-radius: 10px;
    cursor: pointer;
    transition: background-color 0.3s ease;
    flex-shrink: 0;

    img {
      width: 9px;
      margin: 0 6.5px;
    }

    @media (max-width: 992px) {
      display: inline-flex;
      width: 48px;
      height: 48px;
      align-items: center;
      justify-content: center;
      img {
        width: 9px;
        margin: 0 6.5px;
      }
    }
  }

  @media (max-width: 992px) {
    display: flex;
  }
}

